Further changes made to make pages more accessible.

--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Recipe Book</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
 
-    <a href="recipes/lasagna.html"> lasagna Recipe </a>
+    <a href="recipes/lasagna.html" target="_blank"> Lasagna Recipe </a>
 
-    <a href="recipes/pasta_bake.html"> Pasta Bake </a>
+    
+    <a href="recipes/pasta_bake.html" target="_blank">  Pasta Bake </a>
 </body>
 </html>
