--- a/recipes/pasta_bake.html
+++ b/recipes/pasta_bake.html
@@ -6,6 +6,22 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 Pasta Bake ></h1>
+    <h1>Pasta Bake</h1>
+    <img src="./images/pasta.jpeg" height="310" width="310">
+    <h2>Description</h2>
+    <p>This oven-baked pasta is a favorite of my children, who request this recipe often.</p>
+<h2>Ingredients</h2>
+<ul>
+    
+<li>cooking spray</li> 
+<li>1 pound lean ground beef</li>
+<li>2 (15 ounce) cans tomato sauce</li>
+<li>12 ounces brown gravy</li>
+<li>½ cup half-and-half</li>
+<li>½ cup grated Parmesan cheese</li>
+
+
+
+</ul>
 </body>
 </html>
