--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,6 +6,26 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 Lasagna ></h1>
+    <h1>Lasagna</h1> 
+    
+<img src="./images/lasagna.jpeg" height="310" width="310">
+
+<h2>Description</h2>
+
+<p>Prepare this easy homemade lasagne ahead of time and save in the freezer, uncooked, for when you need it during a busy week. Just bake for an extra 45 mins</p>
+<h2>Ingredients</h2>
+<Ol>
+
+<li>2 olive oil, plus extra for the dish</li>
+
+<li>lean beef mince </li>
+
+<li>90g pack prosciutto</li>
+
+<li>800g passata or half our basic tomato sauce</li>
+
+<li>200ml hot beef stock</li>
+<li>nutmeg</li>
+</Ol>
 </body>
 </html>
